# SSTS

./: .gitignore  AboutUs.css  AboutUs.html  Home.html  HomeLayout.css  LOGIN.html  LOGIN.md  Login.html  Login.py  Progress.html  ProgressLayout.css  Settings.css  Settings.html  SignUp.html  SignUpLayout.css  SignupLayout.css
.docker/: docker-compose.base.yaml  docker-compose.development.yaml
.docker/backend/: Dockerfile
.docker/nginx/: Dockerfile
backend/: pyproject.toml
backend/src/: EAlexComputer ScienceRepository.backend-dbdatabase.db  EAlexComputer ScienceRepositorydatabase.db  main.py
backend/src/application/: functions.py
backend/src/infrastructure/: bootstrap.py
backend/src/infrastructure/controller/: register.py
backend/src/infrastructure/db/: session_manager.py
backend/src/infrastructure/entity/: student.py  students.py  subject.py  subjetcs.py
frontend/: Login.html
nginx/config/: nginx.conf
