[tool.poetry]
name = "Student Subject Tracking System"
version = "0.1.0"
description = ""
authors = ["Alexander Irwin <alex07.irwin@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlmodel = "^0.0.21"
psycopg2 = "^2.9.9"
kink = "^0.8.0"
bcrypt = "^4.2.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"